--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-*.DS_Store
-*.log
-*.zip
-.idea
-.sass-cache/
-/nbproject/
-/nbproject/private/
-/node_modules/
-ad.js
-TODO
-test.html
+# ignore node/grunt dependency directories
+node_modules/
